tests/type-errors/tuple_index_out_of_bound.arl
archetype tuple_index_out_of_bound

variable res : int * int = (1, 2)

entry exec () {
  effect {
    require (res[2] = 0)
  }
}
